--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.blogApp</groupId>
 	<artifactId>BlogAppBackend</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>v1.0.0</version>
 	<name>BlogAppBackend</name>
 	<description>BlogAppBackend</description>
 	<url/>
