BlogAppBackendApplication - v1.0.12 >Moved to Postgres from MySQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=BlogAppBackend
-spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/blog_app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
-spring.datasource.username=${DB_USER:root}
-spring.datasource.password=${DB_PASS:Admin}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/blogapp}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASS:admin}
 
 spring.jpa.hibernate.ddl-auto=${DB_DDL:update}
 spring.jpa.show-sql=${SHOW_SQL:true}
